--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
       margin-top: 20px;
       padding-left: 20px;
     }
+    
+　  .topic-bold {
+     font-weight: bold;
+　  }
+   .hashtag {
+     color: #00aaff; /* 水色 */
+　  }
   </style>
 </head>
 <body>
