--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
 
   <button id="drawBtn">お題を引く</button>
   <button id="resetBtn">履歴リセット</button>
+  
+  <!-- 本日の誕生日 -->
+  <h2>本日の誕生日</h2>
+  <div id="birthdayArea" class="birthday-box">
+    読み込み中…
+  </div>
+
+  <!-- 今月の誕生日 -->
+  <h2>今月の誕生日</h2>
+  <div id="monthBirthdayArea" class="birthday-box">
+    読み込み中…
+  </div>
 
   <h2>履歴</h2>
   <ul id="history"></ul>
