--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="topic-row">
       <div id="topicArea">ここにお題が表示されます</div>
       <button id="copyBtn">コピー</button>
+      <button id="tweetBtn">ツイート</button>
     </div>
 
     <div class="button-row">
