--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div id="topicArea">ここにお題が表示されます</div>
 
       <!-- 右上固定ボタン -->
-      <button id="copyBtn">コピー</button>
-      <button id="tweetBtn">ツイート</button>
+      <button id="copyBtn" class="copy action-button">コピー</button>
+      <button id="tweetBtn" class="tweet action-button">ツイート</button>
     </div>
 
     <!-- ★ ツイート文字数カウンター -->
@@ -41,8 +41,8 @@
     <div id="birthdayArea" class="birthday-box">読み込み中...</div>
 
     <div class="button-row">
-      <button id="birthdayCopyBtn">コピー</button>
-      <button id="birthdayTweetBtn">ツイート</button>
+      <button id="birthdayCopyBtn" class="copy action-button">コピー</button>
+      <button id="birthdayTweetBtn" class="tweet action-button">ツイート</button>
     </div>
   </section>
 
@@ -53,8 +53,8 @@
     <div id="monthBirthdayArea" class="birthday-box">読み込み中...</div>
 
     <div class="button-row">
-      <button id="monthBirthdayCopyBtn">コピー</button>
-      <button id="monthBirthdayTweetBtn">ツイート</button>
+      <button id="monthBirthdayCopyBtn" class="copy action-button">コピー</button>
+      <button id="monthBirthdayTweetBtn" class="tweet action-button">ツイート</button>
     </div>
   </section>
 
