--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
   <!-- ▼ 本日の誕生日 -->
   <section class="section-block">
     <h2>本日の誕生日</h2>
-
-    <div id="birthdayArea" class="birthday-box">読み込み中...</div>
-
-    <div class="button-row">
-      <button id="birthdayCopyBtn" class="copy action-btn">コピー</button>
-      <button id="birthdayTweetBtn" class="tweet action-btn">ツイート</button>
+    <div class="topic-row">
+      <div id="birthdayArea" class="birthday-box">読み込み中...</div>
+      <div class="button-row">
+        <button id="birthdayCopyBtn" class="copy action-btn">コピー</button>
+        <button id="birthdayTweetBtn" class="tweet action-btn">ツイート</button>
+      </div>
     </div>
   </section>
 
   <!-- ▼ 今月の誕生日 -->
   <section class="section-block">
     <h2>今月の誕生日</h2>
-
-    <div id="monthBirthdayArea" class="birthday-box">読み込み中...</div>
-
-    <div class="button-row">
-      <button id="monthBirthdayCopyBtn" class="copy action-btn">コピー</button>
-      <button id="monthBirthdayTweetBtn" class="tweet action-btn">ツイート</button>
-    </div>
+    <div class="topic-row">
+      <div id="monthBirthdayArea" class="birthday-box">読み込み中...</div>
+      <div class="button-row">
+        <button id="monthBirthdayCopyBtn" class="copy action-btn">コピー</button>
+        <button id="monthBirthdayTweetBtn" class="tweet action-btn">ツイート</button>
+      </div>
+     </div>
   </section>
 
   <!-- ▼ 履歴 -->
