--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>お題ガチャ</title>
+  <title>イナイレ版ワンドロお題ガチャ</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="./css/style.css">
@@ -17,12 +17,9 @@
 
     <div class="topic-row">
       <div id="topicArea">ここにお題が表示されます</div>
-
       <!-- 右上固定ボタン -->
-      
-        <button id="copyBtn" class="copy action-btn">コピー</button>
-        <button id="tweetBtn" class="tweet action-btn" >𝕏 Post</button>
-      
+      <button id="copyBtn" class="copy action-btn">Copy</button>
+      <button id="tweetBtn" class="tweet action-btn" >𝕏 Post</button>     
     </div>
 
     <!-- ★ ツイート文字数カウンター -->
@@ -42,8 +39,8 @@
     <div class="topic-row">
       <div id="birthdayArea" class="birthday-box">読み込み中...</div>
       <div class="button-row">
-        <button id="birthdayCopyBtn" class="copy action-btn">コピー</button>
-        <button id="birthdayTweetBtn" class="tweet action-btn">ツイート</button>
+        <button id="birthdayCopyBtn" class="copy action-btn">Copy</button>
+        <button id="birthdayTweetBtn" class="tweet action-btn">𝕏 Post</button>
       </div>
     </div>
   </section>
@@ -54,8 +51,8 @@
     <div class="topic-row">
       <div id="monthBirthdayArea" class="birthday-box">読み込み中...</div>
       <div class="button-row">
-        <button id="monthBirthdayCopyBtn" class="copy action-btn">コピー</button>
-        <button id="monthBirthdayTweetBtn" class="tweet action-btn">ツイート</button>
+        <button id="monthBirthdayCopyBtn" class="copy action-btn">Copy</button>
+        <button id="monthBirthdayTweetBtn" class="tweet action-btn">𝕏 Post</button>
       </div>
      </div>
   </section>
