--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>本日のお題</h2>
 
     <div class="topic-row">
-      <div id="topicArea">ここにお題が表示されます</div>
+      <div id="topicArea" class="card-box">ここにお題が表示されます</div>
       <!-- 右上固定ボタン -->
       <button id="copyBtn" class="copy action-btn">Copy</button>
       <button id="tweetBtn" class="tweet action-btn" >𝕏 Post</button>     
@@ -37,7 +37,7 @@
   <section class="section-block">
     <h2>本日の誕生日</h2>
     <div class="topic-row">
-      <div id="birthdayArea" class="birthday-box">読み込み中...</div>
+      <div id="birthdayArea" class="birthday-box card-box">読み込み中...</div>
       <div class="button-row">
         <button id="birthdayCopyBtn" class="copy action-btn">Copy</button>
         <button id="birthdayTweetBtn" class="tweet action-btn">𝕏 Post</button>
@@ -49,7 +49,7 @@
   <section class="section-block">
     <h2>今月の誕生日</h2>
     <div class="topic-row">
-      <div id="monthBirthdayArea" class="birthday-box">読み込み中...</div>
+      <div id="monthBirthdayArea" class="birthday-box card-box">読み込み中...</div>
       <div class="button-row">
         <button id="monthBirthdayCopyBtn" class="copy action-btn">Copy</button>
         <button id="monthBirthdayTweetBtn" class="tweet action-btn">𝕏 Post</button>
