--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
       <button id="resetBtn">履歴リセット</button>
     </div>
   </section>
+  
+  <!-- ▼ ワンドロ開始連絡 -->
+  <section class="section-block">
+    <h2>ワンドロ開始連絡</h2>
+
+    <div class="topic-row">
+      <div id="announceArea" class="card-box">
+        お題を引くと、ここに開始連絡文が表示されます
+      </div>
+      <div class="button-row">
+        <button id="announceCopyBtn" class="copy action-btn">Copy</button>
+        <button id="announceTweetBtn" class="tweet action-btn">𝕏 Post</button>
+      </div>
+    </div>
+  </section>
 
   <!-- ▼ 本日の誕生日 -->
   <section class="section-block">
