--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
     <h2>ワンドロ開始連絡</h2>
 
     <div class="topic-row">
-      <div id="announceArea" class="card-box">
-        お題を引くと、ここに開始連絡文が表示されます
-      </div>
+      <div id="announceArea" class="card-box">お題を引くと、ここに開始連絡文が表示されます</div>
       <div class="button-row">
         <button id="announceCopyBtn" class="copy action-btn">Copy</button>
         <button id="announceTweetBtn" class="tweet action-btn">𝕏 Post</button>
