--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div class="button-row">
       <button id="drawBtn">お題を引く</button>
       <button id="resetBtn">履歴リセット</button>
+      <button id="redoBtn">やりなおし</button>
     </div>
   </section>
   
