--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   <!-- ▼ 履歴 -->
   <section class="section-block">
     <h2>履歴</h2>
+    <button onclick="exportHistoryJSON()">history.json 書き出し</button>
     <ul id="history"></ul>
   </section>
 
